--- a/xg_cus_view/package.json
+++ b/xg_cus_view/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "mathjs": "^3.16.4",
     "mint-ui": "^2.2.9",
     "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.4.2",
