--- a/xg_cus_view/package.json
+++ b/xg_cus_view/package.json
@@ -16,6 +16,7 @@
     "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
+    "vuex": "^3.0.1",
     "vux": "^2.6.5"
   },
   "devDependencies": {
