--- a/xg_work_view/package.json
+++ b/xg_work_view/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "mathjs": "^3.16.5",
     "mint-ui": "^2.2.9",
     "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.5.2",
